# algomage

./: .$Architecture.drawio.bkp  .$Photographer Flow.drawio.bkp  .$Photographer.drawio.bkp  .$User Flow Diagram.png.bkp  .$User Flow.drawio.bkp  .$admin flow.drawio.bkp  .gitignore  Intelligent Event Photo Retrieval System.docx  README.md  dev.ps1  docker-compose.yml  package.json  ~$telligent Event Photo Retrieval System.docx
client/: package-lock.json
client/src/app/dashboard/: page.tsx
client/src/app/login/: page.tsx
client/src/app/photographer/register/: page.tsx
client/src/components/: EventList.tsx  HeroSection.tsx  Navbar.tsx  ProcessingStatus.tsx  StatsCard.tsx  UploadSuccess.tsx  UploadZone.tsx
client/src/lib/: api.ts
docs/: FIX_PASSWORD.md  SETUP_MONGODB.md  faiss_strategy.md
images/: Architecture.drawio  Photographer Flow.drawio
images,doc/: User Flow.drawio  admin flow.drawio
server/: .env  .gitignore  README.md  check_ip.py  debug_env.py  fix_env.py  main.py  pyproject.toml  simple_connect.py  test_search_api.py  verify_db.py
server/auth/: dependencies.py  security.py  utils.py
server/config/: celery_app.py  database.py  settings.py
server/jobs/: tasks.py
server/ml/: face_detector.py  face_encoder.py  image_loader.py  quality_checker.py
server/models/: event.py  user.py
server/routers/: auth.py  events.py  search.py  uploads.py
server/services/: event_service.py  faiss_service.py
